Avalon.Server/k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: avalon-server
spec:
  selector:
    app: avalon-server
  type: LoadBalancer
  ports:
    - port: 8081
      protocol: TCP
